# sensie-eval-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  quickstart.md  quota-limits.md  troubleshooting.md
schemas/: output.schema.json
scripts/: make_sample_data.py  readme_walkthrough.sh
src/: evaluate.py  generate_synthetic_imu 2.py  generate_synthetic_imu.py
src/sensie_eval/: __init__.py  api_client.py  cli.py  evaluate.py  generate.py
src/sensie_eval/data/: sample_dataset.npz
tests/: run_doc_tests.sh  test_api_client.py  test_cli.py  test_evaluate.py
