[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sensie-eval"
version = "0.1.0"
description = "Subject-disjoint evaluation harness for motion-biomarker classification, with a synthetic IMU data generator and a fully offline demo mode."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sensie, LLC" }]
keywords = [
    "evaluation",
    "imu",
    "rlhf",
    "data-quality",
    "annotation",
    "subject-disjoint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "jsonschema>=4.18",
]

[project.urls]
Repository = "https://github.com/sensie-app/sensie-eval-harness"

[project.scripts]
sensie-eval = "sensie_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sensie_eval = ["data/*.npz"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
