[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sensie-eval"
version = "0.1.2"
description = "Subject-disjoint evaluation harness for motion-biomarker classification, with an optional Sensie live-API mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sensie, LLC", email = "mike@joinsensie.com" }]
keywords = ["evaluation", "imu", "biomarker", "rlhf", "annotation", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://joinsensie.com"
Repository = "https://github.com/sensie-app/sensie-eval-harness"

[project.scripts]
sensie-eval = "sensie_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sensie_eval*"]
